# plasma-applet-nowreading

./: CMakeLists.txt  README.md  index.html  params.json  plasma-applet-nowreading.qmlproject  run.sh
package/: metadata.desktop
package/contents/ui/: main.qml
